This method updates the attributes that are defined by a bibtex entry
and updates any extra info only if the new data is not None.
Added tests.

Added pdf and freeze attributes to Bib() object.  The info for these
attributes is not defined by the bibtex file.  Thus it has to be set
by the user, and such info is stored in the BM pickle database rather
than the BM bibtex database.
For now, these are just a placeholder (more on these soon).

Modified filter_field() and merge() functions to preserve non-bitex
information when updating/merging a new list of entries into the
database.


*****  Thu Dec 26 21:10:38 CLT 2019  *****

Channeled bm.edit() through merge(), now all database editing calls
(merge(), edit(), add_entries(), and add_bibtex()) go through the
merge() function; therefore, going through the update_content()
calls that preserve/update the meta info.

*****

Re-indented bm.edit() to four spaces.

*****

Added pdf and freeze arguments to Bib.__init__() method
allowing it to store meta information not contained in bibtex.
Added tests and docstrings.

Modified bm.loadfile() to extract meta information (at the moment,
freeze and pdf) which must be specified before a bibtex entry.

*****

Re-indented bm.loadfile() function to four spaces.


*****  Fri Dec 27 12:15:32 CLT 2019  *****

Added Bib.meta() method, which returns a string with the meta info
that is not None.
Added meta info to Bib.__repr__().
Added meta argument to bm.display_bibs(). This is a flag to diplay
meta info when True.
Added and updated tests.

*****

Added PDF file in cli_search results when 0 < verb < 3.
Added test.
Modified sample.bib to include pdf meta info to an entry.

*****

Added meta argument to bm.export() to include meta information
in output bib file.
Included meta information in tmp file for bm.edit() calls.
Updated mock_home fixture of bm.export() accordingly.
Added meta command-line argument in export CLI.
Added tests.

*****

Re-indented bm.export() function to four spaces.
